@@ -88,9 +88,10 @@ Bug Fixes
 * SOLR-3377: edismax fails to correctly parse a fielded query wrapped by parens.
   This regression was introduced in 3.6.  (Bernd Fehling, Jan Høydahl, yonik)
   
-* SOLR-3621: fix rare concurrency issue when opening a new IndexWriter for replication or rollback.
+* SOLR-3621: Fix rare concurrency issue when opening a new IndexWriter for replication or rollback.
   (Mark Miller)
 
+* SOLR-1781: Replication index directories not always cleaned up. (Terje Sten Bjerkseth, Mark Miller)
 
 Other Changes
 
